Squash BUG: 4D off and size is pitch, all notes show. Fixes #10

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,11 +31,17 @@ body {
 	padding: 5px;
 	margin-right: 20px;
 }
+.dropdown-container.disabled {
+	color: #ccc;
+}
 .dropdown-container .name {
 	padding: 2px;
 	font-size: .9em;
 	border-bottom: 1px solid black;
 	margin-bottom: 4px;
+}
+.dropdown-container.disabled .name {
+	border-bottom: 1px solid #ccc;
 }
 .dropdown-container input {
 	margin-right: 5px;
